# copilot-marketplace

./: .editorconfig  .gitattributes  .gitignore  .mcp.json  AGENTS.md  README.md  backup.ps1  backup.sh  config.portable.json  copilot-instructions.md  mcp-servers.json  plugin.json  pyproject.toml  setup.ps1  setup.py  setup.sh
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json
.copilot/: copilot-instructions.md  lsp-servers.json  mcp.json  plugin.json
.github/plugin/: marketplace.json
.github/workflows/: lint.yml  release.yml  validate.yml
copilot-home/: README.md  copilot-instructions.md  link.ps1  mcp-config.json  settings.json
copilot_setup/: models.py  runner.py  ui_shim.py
copilot_setup/steps/: __init__.py  config_links.py  config_patch.py  lsp_config.py  mcp_build.py  mcp_env.py  plugin_update.py  plugins.py  shell_alias.py  skills.py  stale_cleanup.py
docs/: getting-started-windows.md
extras/: copilot-instructions.md
lib/: backup.py  config.py  git_helpers.py  optional_deps.py  platform_ops.py  restore.py  skills.py  ui.py
plugins/api-reverse-engineer/: plugin.json
plugins/azure-doctor/: plugin.json
plugins/clean/: plugin.json
plugins/doc-generator/: plugin.json
plugins/edge-browser/: plugin.json
plugins/foundry-image-gen/: plugin.json
plugins/git-code-review/: plugin.json
plugins/git-commit/: plugin.json
plugins/git-safety-scan/: plugin.json
plugins/github-writer/: plugin.json
plugins/pr-review-address/: plugin.json
skills/azure-doctor/: SKILL.md
tests/: test_plugin_server_names.py  test_runner.py
(+50 files in other folders)
